--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/normalize.css">
   <link rel="stylesheet" href="style.css">
-  <title>Портфолио</title>
+  <title>Портфолио2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="портфолио Стас Басов на Яндекс Практикуме">
   <meta name="keywords" content="html, css, javascript">
